<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.angelinealex.geolocationproject.MainActivity">

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="10dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <!-- Registration Form -->
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="0.005dip">
                <!-- Full Name Label -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/fullname"
                    style="@style/editText_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:hint="@string/enter_your_full_name"/>
                <!--  Email Label -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_name"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/reg_email"
                    style="@style/editText_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/example_mail_com"
                    android:inputType="" />
                <!-- Password Label -->
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_name"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/reg_password"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword"
                    android:hint="@string/pass_hint" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_address"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/address"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"

                    android:inputType="text" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/phonenumber"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="phone"
                    android:hint="@string/phone_hint"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/department"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:hint="@string/computer_science"

                    />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activities"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/activity1"
                    style="@style/editText_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:hint="@string/chess_batminton"
                    />

                <!-- Register Button -->


                <Button
                    android:id="@+id/Register"
                    style="@style/button_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/register_new_account" />


                <!-- Link to Login Screen -->
                <TextView
                    android:id="@+id/link_to_login"
                    style="@style/textView_Style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/already_has_account"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>
</android.widget.RelativeLayout>
